--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,10 @@
             "email": "alb.stend97@gmail.com"
         }
     ],
-    "require": {},
+    "require": {
+        "vlucas/phpdotenv": "^5.6"
+    },
     "require-dev": {
         "phpunit/phpunit" : "^9.5"
     }
 }
-
