--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Alberto\\SakilaPhpTest\\": "src/"
+            "Alberto\\DatabaseAbstraction\\": "DatabaseAbstraction/src/"
         }
     },
     "authors": [
